--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,6 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+# XML Documentation generated on build
+/src/sdk/OntaviSDK/OntaviSDK.xml
