--- a/src/sdk/OntaviSDK.CloudStorage/OntaviSDK.CloudStorage.csproj
+++ b/src/sdk/OntaviSDK.CloudStorage/OntaviSDK.CloudStorage.csproj
@@ -4,14 +4,15 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Ontavi LLC and Open Source Contributors</Authors>
     <Company>Ontavi LLC</Company>
-    <Product>Ontavi Azure Middleware</Product>
+    <Product>Ontavi Cloud Storage Middleware</Product>
     <PackageProjectUrl>https://github.com/Ontavi/Ontavi</PackageProjectUrl>
     <PackageIconUrl>https://github.com/Ontavi/Ontavi/raw/master/media/nuget-logo.png</PackageIconUrl>
-    <PackageTags>ontavi integration workflow pipeline etl</PackageTags>
+    <PackageTags>ontavi integration workflow pipeline etl azure google aws s3 blob storage</PackageTags>
     <PackageLicenseUrl>https://github.com/Ontavi/Ontavi/blob/master/LICENSE</PackageLicenseUrl>
     <AssemblyVersion>0.1.0.0</AssemblyVersion>
     <FileVersion>0.1.0.0</FileVersion>
     <Version>0.1.0</Version>
+    <Description>Provides access to cloud storage blobs hosted by Azure, Google Cloud, and Amazon AWS.</Description>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -32,7 +33,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="TwentyTwenty.Storage.Amazon" Version="2.9.0" />
     <PackageReference Include="TwentyTwenty.Storage.Azure" Version="2.9.0" />
+    <PackageReference Include="TwentyTwenty.Storage.Google" Version="2.9.0" />
   </ItemGroup>
 
   <ItemGroup>
