--- a/src/sdk/OntaviSDK.CloudStorage/OntaviSDK.CloudStorage.csproj
+++ b/src/sdk/OntaviSDK.CloudStorage/OntaviSDK.CloudStorage.csproj
@@ -16,11 +16,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>OntaviSDK.Azure.xml</DocumentationFile>
+    <DocumentationFile>OntaviSDK.CloudStorage.xml</DocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>OntaviSDK.Azure.xml</DocumentationFile>
+    <DocumentationFile>OntaviSDK.CloudStorage.xml</DocumentationFile>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
